Remove unused files

--- a/.gitignore
+++ b/.gitignore
@@ -32,4 +32,7 @@ bin/
 Clients.txt
 EmployeeStats.txt
 Presences.txt
-Users.txt
+Users.txtClients.txt 
+Users.txt 
+Presences.txt 
+EmployeeStats.txt 
