--- a/.gitignore
+++ b/.gitignore
@@ -32,7 +32,10 @@ bin/
 Clients.txt
 EmployeeStats.txt
 Presences.txt
-Users.txtClients.txt 
+Users.txtClients.txt
 Users.txt 
 Presences.txt 
 EmployeeStats.txt 
+
+### test files ###
+src/TestJDBCDriver.java
